{
    "name": "ShipControl",
    "maps": [
        {
            "name": "Movement",
            "id": "d167cc07-6935-4bb7-b362-2158859c6a98",
            "actions": [
                {
                    "name": "Forward",
                    "type": "Value",
                    "id": "605ce123-6a9b-4757-9763-0a95017ddef2",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Rotation",
                    "type": "Value",
                    "id": "ae04aa1d-3936-46b8-8e0f-53f50466c711",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "Press",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "d35c8932-a927-4c86-8353-0cf7643d7120",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controls",
                    "action": "Forward",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "1D Axis",
                    "id": "4aa8ef0b-817d-4f67-b1e8-4ba16cf70660",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotation",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "positive",
                    "id": "d576c434-5fd1-4a48-ac2c-4d92e60e392c",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controls",
                    "action": "Rotation",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "negative",
                    "id": "92934a1d-8c70-4502-adfd-c0d0a199e0e0",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controls",
                    "action": "Rotation",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "Actions",
            "id": "a15c7bae-bae4-4232-874f-906a4c55ba86",
            "actions": [
                {
                    "name": "ShootForward",
                    "type": "Button",
                    "id": "01a5f55e-4503-4b51-8d4c-e2a21c5309c2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ShootSideways",
                    "type": "Button",
                    "id": "9526c10b-dde9-45ab-b01e-39b45572e9c5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "ae521da7-3526-4e86-8971-ac09d2f64aaa",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controls",
                    "action": "ShootForward",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "a0d03b22-cc92-411d-962c-91f91f2d1a6d",
                    "path": "<Keyboard>/shift",
                    "interactions": "",
                    "processors": "",
                    "groups": "Controls",
                    "action": "ShootSideways",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "UI",
            "id": "02f0a065-5191-4b7d-a2ca-778190a70ddd",
            "actions": [
                {
                    "name": "Point",
                    "type": "PassThrough",
                    "id": "847cb398-4e5b-47ac-833d-d4bf207583e4",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "LeftClick",
                    "type": "PassThrough",
                    "id": "0f14828a-460a-46db-80f0-b7e4e3c6dd09",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "512302d4-1f22-48b5-af40-2873328b60ec",
                    "path": "<Pointer>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Point",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5907d62e-c04d-40a3-9716-7cc229c87032",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Point",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b51c2c3e-adcb-48b9-a766-ac3b617160db",
                    "path": "<Pointer>/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "aa86264a-0e0e-4eb6-a9ff-4f8e7f305fd0",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LeftClick",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "Controls",
            "bindingGroup": "Controls",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}